--- a/index.html
+++ b/index.html
@@ -8,6 +8,8 @@
     <link rel="stylesheet" href="./css/style.css">
 </head>
 <body>
-
+	<div class="container">
+	</div>
+	<h1>Babych</h1>
 </body>
 </html>
